# nix-core

./: .gitignore  404.html  CONTRIBUTING.md  README.md  flake.nix  index.html  mkdocs.yaml  mkdocs.yml  shell.nix
.github/workflows/: build-packages.yml  deploy-docs.yml  flake-check.yml
apps/create/: README.md  create.sh  default.nix
apps/deploy/: default.nix  deploy.sh
apps/install/: default.nix  install.sh
apps/update-packages/: default.nix  update-packages.sh
docs/: create_config.md  create_flake.md  index.md  install_instructions.md
docs/getting-started/: add-configs.md  create-nix-config.md  install-instructions.md  nix-package-manager.md
docs/introduction-to-nix/: derivations.md  flakes.md  install-nix.md  nix-speedrun.md  nix-store.md  nixos.md  nixpkgs.md  overview.md
docs/tips/: dependency-tracing.md  useful-links.md
getting-started/add-configs/: index.html
getting-started/create-nix-config/: index.html
getting-started/install-instructions/: index.html
introduction-to-nix/derivations/: index.html
introduction-to-nix/flakes/: index.html
introduction-to-nix/install-nix/: index.html
introduction-to-nix/nix-speedrun/: index.html
introduction-to-nix/nix-store/: index.html
introduction-to-nix/nixos/: index.html
introduction-to-nix/nixpkgs/: index.html
introduction-to-nix/overview/: index.html
lib/: default.nix  utils.nix
modules/home/: default.nix
overlays/: default.nix
pkgs/: default.nix
pkgs/cdf/: cdf.sh  (+1 more)
search/: search_index.json
templates/py-hello/: .gitignore  flake.nix  package.nix  pyproject.toml  shell.nix
(+540 files in other folders)
